--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
         <script src="scripts/emailValidation.js"></script>
 
     </head>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Glutenfree Rastaurants</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-
-            </div><!-- /.navbar-collapse -->
-        </nav>
-    </header>
     <body>
+        <header>
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">Glutenfree Rastaurants</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+
+                </div><!-- /.navbar-collapse -->
+            </nav>
+        </header>
         <div class="container">
             <div class="header clearfix">
                 <nav>
@@ -109,24 +109,24 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h4>Subheading</h4>
+                <h4>Something to tell your friends</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-                <h4>Subheading</h4>
+                <h4>The new IT</h4>
                 <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-                <h4>Subheading</h4>
+                <h4>What?</h4>
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
 
             <div class="col-lg-6">
-                <h4>Subheading</h4>
+                <h4>NOW</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-                <h4>Subheading</h4>
+                <h4>Have you heard?</h4>
                 <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-                <h4>Subheading</h4>
+                <h4>Meh</h4>
                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
             <div class="container"><p></p></div>
@@ -286,7 +286,7 @@
                             </a>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading" id="identifier">Media heading</h4>
+                            <h4 class="media-heading" id="identifier">Recepies</h4>
                             <p> Pellentesque habitant morbi tristique senectus et netus et 
                                 malesuada fames ac turpis egestas. Vestibulum tortor quam, 
                                 feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu 
@@ -297,10 +297,26 @@
                                 elit eget tincidunt condimentum, eros ipsum rutrum orci, 
                                 sagittis tempus lacus enim ac dui. Donec non enim in turpis 
                                 pulvinar facilisis. Ut felis.</p>
+                            <p> Mauris placerat eleifend leo. Quisque sit amet est et 
+                                sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum 
+                                sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, 
+                                elit eget tincidunt condimentum, eros ipsum rutrum orci, 
+                                sagittis tempus lacus enim ac dui.
+                            <p> Pellentesque habitant morbi tristique senectus et netus et 
+                                malesuada fames ac turpis egestas. Vestibulum tortor quam, 
+                                feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu 
+                                libero sit amet quam egestas semper. Aenean ultricies mi vitae 
+                                est. Mauris placerat eleifend leo. Quisque sit amet est et 
+                                sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum 
+                                sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, 
+                                elit eget tincidunt condimentum, eros ipsum rutrum orci, 
+                                sagittis tempus lacus enim ac dui. Donec non enim in turpis 
+                                pulvinar facilisis. Ut felis.</p>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <h4>Subheading</h4>
+                        <h4>New ingrediens</h4>
                         <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.
                             Aenean ultricies mi vitae 
                             est. Mauris placerat eleifend leo. Quisque sit amet est et 
@@ -316,7 +332,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <h4>Subheading</h4>
+                        <h4>Summer inspirations</h4>
                         <p>Pellentesque habitant morbi tristique senectus et netus et 
                             malesuada fames ac turpis egestas. Vestibulum tortor quam, 
                             feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu 
